# foocat_mike_chen

./: CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat_mike_chen.rst  modules.rst
foocat_mike_chen/: foocat_mike_chen.py
tests/: test_foocat_mike_chen.py
